minor syntax sugar enhancements